# self-agent-id

./: .gitignore  .gitmodules  .prettierignore  .prettierrc  DOCS_REVIEW_PROMPT.md  LICENSE  LINTING_FORMATTING_SPEC.md  README.md  ROUTE_POLICY_HARDENING_PLAN.md  SECURITY_AUDIT_REPORT.md  SECURITY_REVIEW_PROMPT.md  THREAT_MODEL_STRIDE.md  eslint.config.mjs  openapi.yaml  package-lock.json  package.json
.githooks/: pre-commit
.github/workflows/: lint.yml
app/: .env  .env.example  .gitignore  README.md  SECURITY_AUDIT_REPORT.md  bun.lockb  middleware.ts  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  vercel.json  vitest.config.ts
app/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/components/: AgentsTabs.tsx  Badge.tsx  Button.tsx  Card.tsx  CardMatrixReveal.tsx  ClientProviders.tsx  CodeBlock.tsx  Footer.tsx  MatrixRain.tsx  MatrixText.tsx  Navbar.tsx  NetworkBanner.tsx  PrivyIcon.tsx  StatusDot.tsx  TestCard.tsx  VisaBadge.tsx  VisaCard.tsx  VisaUpgradeFlow.tsx
app/lib/: NetworkContext.tsx  aa.ts  aaProxyAuth.ts  agent-api-helpers.ts  agent-discovery.ts  agentKeyVault.ts  api-helpers.ts  chain-config.ts  constants.ts  contract-types.ts  demo-constants.ts  demo-docs.ts  ed25519-relay.ts  ed25519.ts  network.ts  passkey-storage.ts  privy.ts  rate-limit.ts  rateLimit.ts  registration-modes.ts  renderQr.ts  replayGuard.ts  securityStore.ts  selfVerifier.ts  session-token.ts  snippets.ts  wallet.ts  writeAgentCard.ts
app/public/: lottie_agents.json
app/tests/: session-token.test.ts
app/types/: global.d.ts
contracts/: .env.example  .gitignore  README.md  foundry.toml  remappings.txt
contracts/deployments/: registry.json
contracts/script/: Base.s.sol  DeployAgentDemoVerifier.s.sol  DeployAgentDemoVerifierEd25519.s.sol  DeployAgentGate.s.sol  DeployProviders.s.sol  DeploySelfAgentRegistry.s.sol  GrantRoles.s.sol  PostDeploySetup.s.sol  UpgradeSelfAgentRegistry.s.sol
contracts/scripts/: test.sh
contracts/src/: AgentDemoVerifier.sol  AgentDemoVerifierEd25519.sol  AgentGate.sol  LocalRegistryHarness.sol  SelfAgentRegistry.sol  SelfFreshnessChecker.sol  SelfHumanProofProvider.sol  SelfReputationProvider.sol  SelfReputationRegistry.sol  SelfReputationSignal.sol  SelfValidationProvider.sol  SelfValidationRegistry.sol
contracts/test/: AgentDemoVerifierEd25519.t.sol  Ed25519E2E.t.sol  (+12 more)
docs/: AGENT_REGISTRATION_JSON.md  CLI_REGISTRATION.md  CLI_REGISTRATION_GUIDE.md  CLI_REGISTRATION_SPEC.md  EIP_DRAFT_PROOF_OF_HUMAN.md  SELF_PROTOCOL_INTEGRATION.md  api-docs.md  erc8004.md  explainer.md  integration.md
examples/: README.md
examples/minimal-rust/: Cargo.toml  README.md
examples/minimal-rust/src/: agent.rs  service.rs
functions/: package-lock.json  package.json  selfxyz-agent-sdk-0.1.0.tgz  tsconfig.json
plugin/: .mcp.json  README.md
python-sdk/: README.md  pyproject.toml
python-sdk/scripts/: generate_test_vectors.ts  test.sh
python-sdk/src/self_agent_sdk/: __init__.py  _signing.py  agent.py  agent_card.py  cli.py  constants.py  ed25519_agent.py  langchain.py  registration.py  registration_flow.py  types.py  verifier.py
python-sdk/src/self_agent_sdk/middleware/: __init__.py  fastapi.py  flask.py
python-sdk/tests/: conftest.py  test_agent.py  test_cli.py  test_cross_language.py  test_ed25519_agent.py  test_langchain.py  test_live.py  test_middleware_fastapi.py  test_middleware_flask.py  test_signing.py  test_verifier.py  test_verifier_builder.py
python-sdk/tests/fixtures/: test_vectors.json
rust-sdk/: Cargo.toml  README.md
rust-sdk/src/: agent.rs  agent_card.rs  constants.rs  ed25519_agent.rs  lib.rs  middleware.rs  registration.rs  registration_flow.rs  verifier.rs
rust-sdk/tests/: agent_card.rs  cli.rs  integration.rs  registration.rs  signing.rs  verifier.rs
scripts/: apply-typed-contracts.mjs  check-duplicate-headers.py  check-license-headers.py  fix-lint-warnings.mjs  install-git-hooks.sh  license-header-config.json  lint-headers.py  local-registry-harness.sh
sdk/: README.md  package-lock.json  package.json  tsconfig.json
typescript-sdk/: README.md  package-lock.json  package.json  tsconfig.build.json
(+222 files in other folders)
