[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selfxyz-agent-sdk"
version = "0.1.0a1"
description = "Python SDK for Self Agent ID — proof-of-human verification for AI agents"
requires-python = ">=3.10"
license = "BUSL-1.1"
authors = [{ name = "Self Protocol" }]
readme = "README.md"
keywords = ["self", "agent", "identity", "proof-of-human", "erc-8004", "blockchain", "celo", "ai-agent", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "web3>=6.0,<8",
    "eth-account>=0.11",
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://github.com/selfxyz/self-agent-id"
Repository = "https://github.com/selfxyz/self-agent-id/tree/main/python-sdk"
Documentation = "https://docs.self.xyz/agent-id/sdk-integration"
Issues = "https://github.com/selfxyz/self-agent-id/issues"

[project.scripts]
self-agent = "self_agent_sdk.cli:main"
self-agent-python = "self_agent_sdk.cli:main"

[project.optional-dependencies]
flask = ["flask>=2.0"]
fastapi = ["fastapi>=0.100"]
test = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "flask>=2.0",
    "fastapi>=0.100",
    "httpx>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/self_agent_sdk"]
