[package]
name = "self-agent-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Self Agent ID — on-chain AI agent identity with proof-of-human"
license = "MIT"

[features]
default = []
axum = ["dep:axum", "dep:axum-core"]

[dependencies]
alloy = { version = "1", features = [
    "signers",
    "signer-local",
    "providers",
    "contract",
    "sol-types",
    "rpc-client",
    "transport-http",
] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"
thiserror = "2"

# Optional middleware deps
axum = { version = "0.8", optional = true }
axum-core = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
