[package]
name = "self-agent-sdk"
version = "0.2.1"
edition = "2021"
description = "Rust SDK for Self Agent ID — on-chain AI agent identity with proof-of-human"
license = "BUSL-1.1"
repository = "https://github.com/selfxyz/self-agent-id/tree/main/rust-sdk"
homepage = "https://github.com/selfxyz/self-agent-id"
documentation = "https://docs.self.xyz/agent-id/sdk-integration"
keywords = ["self", "agent", "identity", "proof-of-human", "blockchain"]
categories = ["authentication", "cryptography", "web-programming"]

[features]
default = []
axum = ["dep:axum", "dep:axum-core"]

[dependencies]
alloy = { version = "1", features = [
    "signers",
    "signer-local",
    "providers",
    "contract",
    "sol-types",
    "rpc-client",
    "transport-http",
] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["std"] }
thiserror = "2"

# Optional middleware deps
axum = { version = "0.8", optional = true }
axum-core = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
