[package]
name = "self-agent-id-minimal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent"
path = "src/agent.rs"

[[bin]]
name = "service"
path = "src/service.rs"

[dependencies]
self-agent-sdk = { version = "0.1.0", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde_json = "1"
